--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Poppins, sans-serif;
-  margin: 0px;
+  margin: 0;
 }
 h1 {
   font-size: 50px;
@@ -8,7 +8,7 @@ h1 {
 .orange-color {
   color: orange;
 }
-section {
+.flexible-container {
   display: flex;
   margin-bottom: 100px;
 }
@@ -24,7 +24,7 @@ section {
   background-image: linear-gradient(orange, red);
   padding: 10px 40px;
   border-radius: 5px;
-  color: white;
+  color: #fff;
   font-weight: 700;
 }
 .top-banner {
